unreleased - Version 2.0.0
* Add support for "workers" parameter (#19)
* Support SELinux type for the repo directory

2015-08-10 - Version 1.1.0
* Support for Puppet 2.7 removed
* Stop testing < Puppet 3.7
* Fixes for future parser (#12)
* Bumped min. required stdlib to 4.0
* Official support for RHEL 7

2014-23-09 - Version 1.0.0
* Default value for cron_minute changed from */1 to */10
* New README layout

2014-03-09 - Version 0.9.7
* Add manage_repo_dirs parameter

2014-02-09 - Version 0.9.6
* Add timeout parameter for execs (#9)
* Add groupfile support
* Even more tests
* metadata.json with tested OS compatibility data

2014-18-05 - Version 0.9.5
* Allow suppressing of output from cronjob (#8)
* Repository update script for each repo
* Converted rspec-system tests to beaker
* Major refactoring of rspec tests

2013-17-12 - Version 0.9.4
* Repo update cronjob made optional (Vlastimil Holer)
* changelog_limit made optional (Vlastimil Holer)
* Rudimentary Debian support (Aaron Hicks)