@@ -1,6 +1,7 @@
 unreleased - Version 2.0.0
 * Add support for "workers" parameter (#19)
 * Support SELinux type for the repo directory
+* Support mode and recurse for repo directory (#21)
 
 2015-08-10 - Version 1.1.0
 * Support for Puppet 2.7 removed
